# aode-relay

./: .dockerignore  .drone.yml  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm64v8  Dockerfile.migrations.arm64v8  Jenkinsfile  LICENSE  README.md  build.sh  docker-compose.yml.example  flake.nix  relay.nix
.github/workflows/: build-image.yml
docker/drone/: Dockerfile  manifest.tmpl
docker/prod/: Dockerfile  Dockerfile.amd64  Dockerfile.arm32v7  Dockerfile.arm64v8  Dockerfile.migrations.arm64v8  build-image.sh  deploy.sh  docker-compose.yml  manifest.sh
migrations/2020-03-14-211045_create_listeners/: down.sql  up.sql
migrations/2020-03-14-213217_create_blocks/: down.sql  up.sql
migrations/2020-03-14-213511_create_whitelists/: down.sql  up.sql
migrations/2020-03-16-012053_create-settings/: down.sql  up.sql
migrations/2020-03-16-160336_add_triggers/: down.sql  up.sql
migrations/2020-03-22-194453_create-jobs/: down.sql  up.sql
migrations/2020-03-23-175108_create-actors/: down.sql  up.sql
migrations/2020-03-23-175637_create-nodes/: down.sql  up.sql
migrations/2020-03-25-211630_add-node-notifications/: down.sql  up.sql
migrations/2020-03-25-214244_make-nodes-listener-id-unique/: down.sql  up.sql
migrations/2020-03-26-163641_create-media/: down.sql  up.sql
scss/: index.scss
src/: actor.rs  admin.rs  apub.rs  args.rs  build.rs  cache.rs  collector.rs  config.rs  data.rs  db.rs  db_actor.rs  error.rs  extractors.rs  future.rs  inbox.rs  jobs.rs  label.rs  main.rs  middleware.rs  node.rs  nodeinfo.rs  notify.rs  rehydrate.rs  requests.rs  responses.rs  routes.rs  schema.rs  spawner.rs  state.rs  telegram.rs  verifier.rs  webfinger.rs
src/admin/: client.rs  routes.rs
src/collector/: double.rs  stats.rs
src/data/: actor.rs  last_online.rs  media.rs  mod.rs  node.rs  state.rs
src/jobs/: apub.rs  cache_media.rs  contact.rs  deliver.rs  deliver_many.rs  instance.rs  mod.rs  nodeinfo.rs  process_listeners.rs  record_last_online.rs  storage.rs
src/jobs/apub/: announce.rs  follow.rs  forward.rs  mod.rs  reject.rs  undo.rs
src/middleware/: mod.rs  payload.rs  timings.rs  verifier.rs  webfinger.rs
src/routes/: actor.rs  healthz.rs  inbox.rs  index.rs  media.rs  mod.rs  nodeinfo.rs  statics.rs
systemd/: example-relay.service  example-relay.service.env  example-relay.socket
templates/: admin.rs.html  index.rs.html  info.rs.html  instance.rs.html
