[package]
name = "relay"
description = "A simple activitypub relay"
version = "0.2.17"
authors = ["asonix <asonix@asonix.dog>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://git.asonix.dog/asonix/ap-relay"
keywords = ["activitypub", "relay"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
actix-rt = "2.0.2"
actix-web = { version = "4.0.0-beta.7", default-features = false, features = ["compress-brotli", "compress-gzip", "compress-zstd"] }
actix-webfinger = "0.4.0-beta.3"
activitystreams = "0.7.0-alpha.10"
activitystreams-ext = "0.1.0-alpha.2"
ammonia = "3.1.0"
async-mutex = "1.0.1"
async-rwlock = "1.3.0"
awc = { version = "3.0.0-beta.6", default-features = false, features = ["compress-brotli", "compress-gzip", "compress-zstd", "rustls"] }
background-jobs = "0.9.0"
base64 = "0.13"
chrono = "0.4.19"
config = "0.11.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.12"
http-signature-normalization-actix = { version = "0.5.0-beta.6", default-features = false, features = ["sha-2"] }
log = "0.4"
lru = "0.6.0"
mime = "0.3.16"
pretty_env_logger = "0.4.0"
rand = "0.8"
rsa = "0.5"
rsa-magic-public-key = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
sled = "0.34.6"
structopt = "0.3.12"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }

[build-dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
ructe = { version = "0.13.0", features = ["sass", "mime03"] }

[profile.dev.package.rsa]
opt-level = 3
