[package]
name = "ap-relay"
description = "A simple activitypub relay"
version = "0.3.85"
authors = ["asonix <asonix@asonix.dog>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://git.asonix.dog/asonix/ap-relay"
keywords = ["activitypub", "relay"]
edition = "2021"
build = "src/build.rs"

[[bin]]
name = "relay"
path = "src/main.rs"

[features]
console = ["console-subscriber"]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
actix-rt = "2.7.0"
actix-web = { version = "4.0.1", default-features = false, features = [
  "rustls",
  "compress-brotli",
  "compress-gzip",
] }
actix-webfinger = "0.4.0"
activitystreams = "0.7.0-alpha.21"
activitystreams-ext = "0.1.0-alpha.3"
ammonia = "3.1.0"
awc = { version = "3.0.0", default-features = false, features = ["rustls"] }
bcrypt = "0.14"
base64 = "0.21"
clap = { version = "4.0.0", features = ["derive"] }
config = "0.13.0"
console-subscriber = { version = "0.1", optional = true }
dashmap = "5.1.0"
dotenv = "0.15.0"
futures-util = "0.3.17"
lru = "0.10.0"
metrics = "0.21.0"
metrics-exporter-prometheus = { version = "0.12.0", default-features = false, features = [
  "http-listener",
] }
metrics-util = "0.15.0"
mime = "0.3.16"
minify-html = "0.11.0"
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
opentelemetry-otlp = "0.12"
pin-project-lite = "0.2.9"
quanta = "0.11.0"
rand = "0.8"
rsa = { version = "0.9", features = ["sha2"] }
rsa-magic-public-key = "0.8.0"
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
teloxide = { version = "0.12.0", default-features = false, features = [
  "ctrlc_handler",
  "macros",
  "rustls",
] }
thiserror = "1.0"
time = { version = "0.3.17", features = ["serde"] }
tracing = "0.1"
tracing-awc = "0.1.7"
tracing-error = "0.2"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3", features = [
  "ansi",
  "env-filter",
  "fmt",
] }
tokio = { version = "1", features = ["macros", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies.background-jobs]
version = "0.15.0"
default-features = false
features = ["background-jobs-actix", "error-logging"]

[dependencies.http-signature-normalization-actix]
version = "0.8.0"
default-features = false
features = ["client", "server", "sha-2"]

[dependencies.tracing-actix-web]
version = "0.7.5"

[build-dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
ructe = { version = "0.16.0", features = ["sass", "mime03"] }
toml = "0.7.0"

[profile.dev.package.rsa]
opt-level = 3
